add first version of branch that was implemented following API first approach
