# controllers/routers.go
@@ -1,0 +1,93 @@
+/*
+ * Contacts
+ *
+ * Simple AddressBook API to manage contacts
+ *
+ * API version: 1.0
+ * Contact: john.doe@mail.schwarz
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package controllers
+
+import (
+	"fmt"
+	"net/http"
+	"strings"
+
+	"github.com/gorilla/mux"
+)
+
+type Route struct {
+	Name        string
+	Method      string
+	Pattern     string
+	HandlerFunc http.HandlerFunc
+}
+
+type Routes []Route
+
+func NewRouter() *mux.Router {
+	router := mux.NewRouter().StrictSlash(true)
+	for _, route := range routes {
+		var handler http.Handler
+		handler = route.HandlerFunc
+		handler = Logger(handler, route.Name)
+
+		router.
+			Methods(route.Method).
+			Path(route.Pattern).
+			Name(route.Name).
+			Handler(handler)
+	}
+
+	return router
+}
+
+func Index(w http.ResponseWriter, r *http.Request) {
+	fmt.Fprintf(w, "Hello World!")
+}
+
+var routes = Routes{
+	Route{
+		"Index",
+		"GET",
+		"/addressbook/v1/",
+		Index,
+	},
+
+	Route{
+		"CreateContact",
+		strings.ToUpper("Post"),
+		"/addressbook/v1/contacts",
+		CreateContact,
+	},
+
+	Route{
+		"DeleteContact",
+		strings.ToUpper("Delete"),
+		"/addressbook/v1/contacts/{uniqueId}",
+		DeleteContact,
+	},
+
+	Route{
+		"GetContact",
+		strings.ToUpper("Get"),
+		"/addressbook/v1/contacts/{uniqueId}",
+		GetContact,
+	},
+
+	Route{
+		"GetContacts",
+		strings.ToUpper("Get"),
+		"/addressbook/v1/contacts",
+		GetContacts,
+	},
+
+	Route{
+		"UpdateContact",
+		strings.ToUpper("Put"),
+		"/addressbook/v1/contacts/{uniqueId}",
+		UpdateContact,
+	},
+}
